2007-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (xterm-function-map): Replace bindings that were
	deleted by the merge.

2007-09-14  Ulf Jasper  <ulf.jasper@web.de>

	* play/bubbles.el (bubbles-version): Bump value to "0.5".
	(bubbles-mode-map): Move define-key statements here.
	(bubbles-game-theme-menu): Ditto.
	(bubbles-graphics-theme-menu): Ditto.
	(bubbles-menu): Ditto.
	(bubbles-mode): Initialize buffer-undo-list, redisplay.
	(bubbles--initialize): Reset buffer-undo-list, redisplay.
	(bubbles-plop): Set buffer-undo-list, redisplay.
	(bubbles-undo): Reset buffer-undo-list, redisplay.
	(bubbles--show-images): Take care of missing text properties.

2007-09-14  Glenn Morris  <rgm@gnu.org>

	* startup.el (fancy-startup-text, fancy-about-text): Fix face
	quoting.

	* calendar/cal-hebrew.el, calendar/cal-menu.el
	* calendar/calendar.el, calendar/diary-lib.el
	* calendar/holidays.el: Rename all instances of
	list-calendar-holidays callers to calendar-list-holidays,
	list-holidays to holiday-list, check-calendar-holidays to
	calendar-check-holidays, mark-calendar-holidays to
	calendar-mark-holidays, and filter-visible-calendar-holidays to
	holiday-filter-visible-calendar.

2007-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (xterm-function-map): Add C-M- bindings.

2007-09-13  Sascha Wilde  <wilde@sha-bang.de>  (tiny change)

	* play/bubbles.el (bubbles--initialize-images): Fix bug:
	Use transparent background for empty cells in graphics mode.

2007-09-13  Jari Aalto  <jari.aalto@cante.net>

	* man.el (Man-default-man-entry): At end of line, continue looking
        to the next line for possible end of hyphenated command.

2007-09-13  Chris Moore  <dooglus@gmail.com>

	* shell.el (shell-resync-dirs): Don't move the cursor relative to
        the command being edited.

2007-09-12  Jim Meyering  <jim@meyering.net>  (tiny change)

	* emacs-lisp/copyright.el (copyright-names-regexp): Doc fix: typo.
